--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/core": "^3.4.6",
     "@react-native-community/async-storage": "^1.12.0",
     "@react-native-community/masked-view": "0.1.1",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-redux": "^7.1.9",
     "@types/redux-persist": "^4.3.1",
     "axios": "0.20.0",
@@ -25,7 +26,7 @@
     "react-native-safe-area-context": "3.1.7",
     "react-native-screens": "2.10.1",
     "react-native-shared-element": "0.7.0",
-    "react-native-vector-icons": "7.0.0",
+    "react-native-vector-icons": "^7.0.0",
     "react-navigation": "4",
     "react-navigation-shared-element": "2.3.1",
     "react-navigation-stack": "2",
