--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.63.2",
     "react-native-gesture-handler": "1.7.0",
     "react-native-loading-spinner-overlay": "1.1.0",
+    "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "3.1.7",
     "react-native-screens": "2.10.1",
     "react-native-shared-element": "0.7.0",
@@ -30,6 +31,7 @@
     "react-navigation": "4",
     "react-navigation-shared-element": "2.3.1",
     "react-navigation-stack": "2",
+    "react-navigation-tabs": "^2.9.0",
     "react-redux": "^7.2.1",
     "redux": "4.0.5",
     "redux-persist": "6.0.0",
