--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "md5": "^2.3.0",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-exception-handler": "^2.10.8",
     "react-native-gesture-handler": "1.7.0",
     "react-native-loading-spinner-overlay": "1.1.0",
     "react-native-reanimated": "^1.13.0",
